Modify color styling to remain consistent with Chrome - black background color, white font; Add missing classname in pwreset page - fixes position of password hide toggle button; Add missing translations for error messages in pwReset.js; Fix messaging and check for session status in login.js; Add styling for pwReset.js and login.js submit button -  not fitting in parent container, color not woring in Chrome; Fixed  translations for pwReset.js and login.js submit button - was showing only for session expired status;

--- a/src/styles/partials/logIn.scss
+++ b/src/styles/partials/logIn.scss
@@ -41,3 +41,11 @@
     transform-origin: 0 0;
   }
 }
+
+.loginbutton,
+.pwresetbutton {
+  max-width: 100%;
+  white-space: normal;
+  background-color: vars.$foreground;
+  color: vars.$background;
+}
